[project]
name = "yell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "llm>=0.26",
    "llm-anthropic>=0.18",
    "llm-echo>=0.2",
    "llm-gemini>=0.26",
    "rich>=14.0.0",
    "sqlite-utils>=3.38",
    "typer>=0.19.0",
    "textual@https://github.com/yorickvP/textual/archive/refs/heads/color-palette-updates.zip",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "deptry>=0.23.0",
    "pre-commit>=4.3.0",
    "pyright>=1.1.402",
    "ruff>=0.13.3",
    "textual-dev>=1.7.0",
]

[project.scripts]
yell = "yell.index:app"

[tool.deptry.per_rule_ignores]
DEP002 = ["llm-anthropic", "llm-echo", "llm-gemini"]

[tool.setuptools.package-data]
yell = ["*.tcss"]

[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "F"]
